# mp4-to-ascii

./: CMakeLists.txt  README.md  main.cpp
src/: Frame.cpp  Frame.h  Video.h  VideoPlayer.cpp  VideoPlayer.h  main.cpp
